<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/blue_gradient"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <FrameLayout
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/image_106">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/install_mistari"
        android:fontFamily="@font/sfprotextlight"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/_20ssp"
       />
    <TextView
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_setup"
        android:fontFamily="@font/sfprotextmedium"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/_15ssp"
        />

<LinearLayout
    android:layout_marginBottom="@dimen/_10sdp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_vertical"
    android:orientation="vertical">
    <FrameLayout
        android:id="@+id/enable"
<<<<<<< HEAD
=======
<<<<<<< HEAD
=======
        android:layout_marginTop="@dimen/_60sdp"
>>>>>>> 57b3d49b88b962e819237893ebf8b421bf067efb
>>>>>>> 02bb1b856fec1d032aa22613a7c3b54da93eb1d7
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        >

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:text="@string/enable_mistari"
            android:textColor="#1e2930"
            android:gravity="center"
            android:fontFamily="@font/sfprotextregular"
            android:textSize="@dimen/_12ssp"
            android:background="@drawable/white_bg"/>

        <TextView
            android:outlineSpotShadowColor="#F30E2CF1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_circle"
            android:elevation="@dimen/_5sdp"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:fontFamily="@font/sfprotextlight"
            android:text="@string/one"
            android:textColor="#00cecc"
            android:textSize="@dimen/_16ssp" />
    </FrameLayout>
    <FrameLayout
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        >

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:text="@string/choose_mistari"
            android:textColor="@color/white"
            android:gravity="center"
            android:fontFamily="@font/sfprotextregular"
            android:textSize="@dimen/_12ssp"
            android:background="@drawable/green_bg"/>

        <TextView
            android:outlineSpotShadowColor="#F30E2CF1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/green_circle"
            android:elevation="@dimen/_5sdp"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/two"
            android:fontFamily="@font/sfprotextlight"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />
    </FrameLayout>

    <FrameLayout
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        >

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:paddingStart="@dimen/_25sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:text="@string/language_theme"
            android:textColor="#1e2930"
            android:gravity="center"
            android:fontFamily="@font/sfprotextregular"
            android:textSize="@dimen/_12ssp"
            android:background="@drawable/white_bg"/>

        <TextView
            android:outlineSpotShadowColor="@android:color/holo_blue_bright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_circle"
            android:elevation="@dimen/_5sdp"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/three"
            android:textColor="#00cecc"
            android:fontFamily="@font/sfprotextlight"
            android:textSize="@dimen/_16ssp" />
    </FrameLayout>


    <TextView

    android:layout_width="@dimen/_260sdp"
    android:layout_height="wrap_content"
    android:text="@string/optional"
    android:textSize="@dimen/_9ssp"
    android:textColor="@color/white"
        android:fontFamily="@font/sfprotextregular"
    android:gravity="end"/>

   <LinearLayout
       android:layout_marginTop="@dimen/_20sdp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:gravity="center"
       android:orientation="horizontal">
       <LinearLayout
           android:layout_marginRight="@dimen/_3sdp"
           android:layout_gravity="center_vertical"
           android:layout_marginTop="@dimen/_1sdp"
           android:gravity="center"
           android:padding="@dimen/_10sdp"
           android:layout_width="@dimen/_10sdp"
           android:layout_height="@dimen/_10sdp"
           android:background="@drawable/circle_transparent"
           >
           <ImageView
               android:layout_gravity="center"
               android:layout_width="@dimen/_10sdp"
               android:layout_height="@dimen/_10sdp"
               android:src="@drawable/check"
               />
       </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/installation"
        android:textColor="@color/white"
        android:fontFamily="@font/sfprotextregular"
        android:textSize="@dimen/_10ssp"
        />
   </LinearLayout>
    <LinearLayout
        android:id="@+id/finish"
        android:elevation="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_gravity="center"
        android:background="@drawable/transparent_bg"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/white"
            android:fontFamily="@font/sfprotextregular"
            android:layout_gravity="start"
            />
        <TextView
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_small_circle"
            android:text="@string/v"
            android:textSize="@dimen/_12ssp"
            android:rotation="270"
            android:textColor="@android:color/holo_red_dark"
            android:gravity="center"
            />
    </LinearLayout>

</LinearLayout>

        </LinearLayout>

        <TextView
        android:padding="@dimen/_5sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        android:layout_gravity="center|bottom"
        android:gravity="center|bottom"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="@font/sfprotextmedium"
        />

    </FrameLayout>
</LinearLayout>
</layout>