<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@drawable/pink_gradient"
    tools:context=".Activity.CrearteAccount">


        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_gravity="center"
                android:src="@mipmap/logo"/>
            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/create_mistari_account"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                android:fontFamily="@font/sfprotextmedium"
                />

        </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <FrameLayout
            android:padding="@dimen/_10sdp"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/white_bg"
            >
        <EditText
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:maxLength="25"
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_bg"
            android:hint="@string/email_address"
            android:textColorHint="#1e2930"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/sfprotextregular"
            />
            <TextView
                android:layout_marginStart="@dimen/_90sdp"
                android:id="@+id/tv_email_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/star"
                android:textColor="#fa2551"
                android:textSize="@dimen/_12ssp"
                />
        </FrameLayout>
        <TextView
            android:id="@+id/tv_email_error"
            android:visibility="gone"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:text="@string/email_error"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/white"
            android:fontFamily="@font/sfprotextregular"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:padding="@dimen/_10sdp"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/white_bg"
            >
        <EditText
            android:inputType="number"
            android:singleLine="true"
            android:maxLength="16"
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_bg"
            android:hint="@string/phone_number"
            android:textColorHint="#1e2930"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/sfprotextregular"
            android:layout_weight="1"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optional"
                android:textSize="@dimen/_8ssp"
                android:fontFamily="@font/sfprotextregular"
                android:textColor="#fa2551"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_phone_error"
            android:visibility="gone"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:text="@string/phont_error"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/white"
            android:fontFamily="@font/sfprotextregular"
            />
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/create_account_bg"
>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
    <LinearLayout
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <FrameLayout
            android:padding="@dimen/_10sdp"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/white_bg"
            >
        <EditText
            android:inputType="textPassword"
            android:singleLine="true"
            android:maxLength="20"
            android:id="@+id/et_pswrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_bg"
            android:hint="@string/password"
            android:textColorHint="#1e2930"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/sfprotextregular"
            />
            <TextView
                android:layout_marginStart="@dimen/_62sdp"
                android:id="@+id/tv_pswrd_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/star"
                android:textColor="#fa2551"
                android:textSize="@dimen/_12ssp"
                />
        </FrameLayout>
        <TextView
            android:id="@+id/tv_pswrd_error"
            android:visibility="gone"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:text="@string/pswrd_error"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/white"
            android:fontFamily="@font/sfprotextregular"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <FrameLayout
            android:padding="@dimen/_10sdp"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/white_bg"
            >
        <EditText
            android:inputType="textPassword"
            android:singleLine="true"
            android:maxLength="20"
            android:id="@+id/et_cnfpswrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_bg"
            android:hint="@string/cnf_password"
            android:textColorHint="#1e2930"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/sfprotextregular"
            />
            <TextView
                android:layout_marginStart="@dimen/_115sdp"
                android:id="@+id/tv_cnfpswrd_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/star"
                android:textColor="#fa2551"
                android:textSize="@dimen/_12ssp"
                />
        </FrameLayout>
        <TextView
            android:id="@+id/tv_cnfpswrd_error"
            android:visibility="gone"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:text="@string/cnf_pswrd_error"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/white"
            android:fontFamily="@font/sfprotextregular"
            />
    </LinearLayout>



<LinearLayout
    android:id="@+id/ll3"
    android:onClick="create"
    android:layout_marginTop="@dimen/_20sdp"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/login_option_btn_green"
    android:layout_gravity="center"
    android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/create_account"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:fontFamily="@font/sfprotextregular"
                    android:textSize="@dimen/_12ssp"
                    android:layout_weight="1"
                    />
    <TextView
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/white_small_circle"
        android:text="@string/v"
        android:textSize="@dimen/_12ssp"
        android:rotation="270"
        android:textColor="#00cecc"
        android:gravity="center"
        />
</LinearLayout>




    </LinearLayout>
        <TextView

            android:id="@+id/signin"
            android:padding="@dimen/_3sdp"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:gravity="center"
            android:alpha="0.5"
            android:textColor="@color/white"
            android:fontFamily="@font/sfprotextregular"
            android:layout_gravity="center_horizontal|bottom"
            android:textSize="@dimen/_12ssp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/skip_bg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"


            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
</layout>